ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-base/css/content-buttons.css
.memorial {
	padding-right: 4%
}

/* Naresh - adding option for this, used on news and blog list */
.padding-bottom-60 {
	padding-bottom: 60px;
}

.contentBand .video .sprite.icon-large-play-orange {
  left: 42%;
  top: 34%;
}

/*
.memorial p {
	margin-bottom: 50px;
}
commented by Naresh */

/* Handle iPad landscape mode*/
@media(max-width:1024px) {

	.contentBand .video .sprite.icon-large-play-orange {
      left: 38%;
      top: 31%;
    }
}
@media(max-width:991px) {
	.icon-buttons {
		padding-top: 30px;
		max-width: 420px;
	}
	/*
	.memorial p {
		margin-bottom: 35px;
	}
	commented by Naresh */

	.contentBand .video .sprite.icon-large-play-orange {
      left: 42%;
      top: 38%;
    }
}

@media(max-width:767px) {
	.icon-buttons {
		width: 100%;
	}
	.memorial {
		padding-right:0;
		padding-bottom:40px;
	}

    .contentBand .video .sprite.icon-large-play-orange {
      left: 43%;
      top: 40%;
    }
}

